<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:text="@string/str_search_book_format"
                android:textStyle="bold"
                />

            <com.github.jsbxyyx.xbook.AutoLinearLayout
                android:id="@+id/ll_ext"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="PDF" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="EPUB" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TXT" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="AZW" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="AZW3" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MOBI" />

            </com.github.jsbxyyx.xbook.AutoLinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:text="@string/str_search_book_language"
                android:textStyle="bold"
                />

            <com.github.jsbxyyx.xbook.AutoLinearLayout
                android:id="@+id/ll_lang"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="chinese" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="japanese" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="traditional chinese" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="english" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="korean" />

            </com.github.jsbxyyx.xbook.AutoLinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:text="@string/str_is_sync"
                android:textStyle="bold"
                />

            <CheckBox
                android:id="@+id/cb_sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_sync"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:text="@string/str_download_list_settings"
                android:textStyle="bold"
                />

            <CheckBox
                android:id="@+id/cb_show_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_show_image"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:text="@string/str_reader_settings"
                android:textStyle="bold"
                />

            <CheckBox
                android:id="@+id/cb_online_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_online_reader"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btn_clear_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_clear_settings" />

        <Button
            android:id="@+id/btn_open_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_files_permissions" />

        <LinearLayout
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/str_current_version" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/str_0_1" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_update"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                app:iconGravity="textStart"
                android:visibility="gone"
                android:text="@string/str_0_1"
                app:icon="@drawable/baseline_file_download_24" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>